<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/avatarFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            tools:ignore="ContentDescription"
            tools:src="@android:drawable/picture_frame" />

    </FrameLayout>

    <TextView
        android:id="@+id/name"
        style="@style/AppTheme.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarFrame" />

    <TextView
        android:id="@+id/language"
        style="@style/AppTheme.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="Kotlin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/repo_details_background"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language">

        <TextView
            android:id="@+id/forks"
            style="@style/AppTheme.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/forks"
            android:textColor="@color/colorTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/forksValue"
            style="@style/AppTheme.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="123" />

        <View
            android:id="@+id/forksDivider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="18dp"
            android:background="@color/colorDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forks" />

        <TextView
            android:id="@+id/issues"
            style="@style/AppTheme.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/issues"
            android:textColor="@color/colorTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forksDivider" />

        <TextView
            android:id="@+id/issuesValue"
            style="@style/AppTheme.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forksDivider"
            tools:text="123" />

        <View
            android:id="@+id/issuesDivider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="18dp"
            android:background="@color/colorDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/issues" />

        <TextView
            android:id="@+id/stars"
            style="@style/AppTheme.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/starred_by"
            android:textColor="@color/colorTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/issuesDivider" />

        <TextView
            android:id="@+id/starsValue"
            style="@style/AppTheme.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/issuesDivider"
            tools:text="123" />

        <View
            android:id="@+id/starsDivider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="18dp"
            android:background="@color/colorDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stars" />

        <TextView
            android:id="@+id/version"
            style="@style/AppTheme.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/last_release_version"
            android:textColor="@color/colorTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/starsDivider" />

        <TextView
            android:id="@+id/versionValue"
            style="@style/AppTheme.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/starsDivider"
            tools:text="123" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>